src/snapshots/templating_engine__parse__test__newlines-3.snap
---
source: src/lib.rs
expression: "parse_template(b\"\\n\\nbar{{\\n bar \\n}}\\n\\nfoo\")"
---
Ok(
    (
        NumberedInput {
            line_number: 6,
            i: [],
        },
        [
            NumberedBlock {
                line_number: 0,
                block: Plain(
                    Ok(
                        "\n\nbar",
                    ),
                ),
            },
            NumberedBlock {
                line_number: 2,
                block: Special(
                    TagCurly(
                        Ok(
                            "bar",
                        ),
                    ),
                ),
            },
            NumberedBlock {
                line_number: 4,
                block: Plain(
                    Ok(
                        "\n\nfoo",
                    ),
                ),
            },
        ],
    ),
)
