src/snapshots/templating_engine__parse__test__separator_in_special-10.snap
---
source: src/lib.rs
expression: "parse_template(b\"{{ }} }}\")"
---
Err(
    Failure(
        Error {
            input: [
                125,
                125,
            ],
            code: Tag,
        },
    ),
)
