src/snapshots/templating_engine__parse__test__separator_in_special-13.snap
---
source: src/lib.rs
expression: "parse_template(b\"{{ %} }}\")"
---
Ok(
    (
        [],
        [
            Special(
                TagCurly(
                    Ok(
                        "%}",
                    ),
                ),
            ),
        ],
    ),
)
