src/snapshots/templating_engine__parse__test__separator_in_special-14.snap
---
source: src/lib.rs
expression: "parse_template(b\"{% %} %}\")"
---
Err(
    Failure(
        Error {
            input: [
                37,
                125,
            ],
            code: Tag,
        },
    ),
)
